--- a/src/views/popup.html
+++ b/src/views/popup.html
@@ -6,5 +6,9 @@
   <body>
     <p>Filler text for popup.html</p>
     <canvas id="canvas-output"></canvas>
+    <canvas id="hist-red"></canvas>
+    <canvas id="hist-green"></canvas>
+    <canvas id="hist-blue"></canvas>
+    <script src="opencv.js" type="text/javascript"></script>
   </body>
 </html>
