--- a/src/views/background.html
+++ b/src/views/background.html
@@ -5,5 +5,7 @@
   </head>
   <body>
     <p>Filler text for background.html</p>
+
+    <script src="opencv.js" type="text/javascript"></script>
   </body>
 </html>
