Decent prediction using hellinger comparison method
Also included opencv version 4.2.0 directly in src

--- a/src/views/options.html
+++ b/src/views/options.html
@@ -21,6 +21,10 @@
         <canvas id='canvas-output'></canvas>
       </div>
     </form>
+
+    <label for="color-json">Histogram Profile:</label>
+    <textarea id="color-json" name="color-json" rows="20" cols="50"></textarea>
+
     
     <script src="opencv.js" type="text/javascript"></script>
   </body>
