Added react-js i guess

--- a/src/views/background.html
+++ b/src/views/background.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Filler text for background.html</p>
-
+    <canvas id="canvas-output"></canvas>
     <script src="opencv.js" type="text/javascript"></script>
   </body>
 </html>
