--- a/src/views/popup.html
+++ b/src/views/popup.html
@@ -5,10 +5,7 @@
   </head>
   <body>
     <p>Filler text for popup.html</p>
-    <canvas id="canvas-output"></canvas>
-    <canvas id="hist-red"></canvas>
-    <canvas id="hist-green"></canvas>
-    <canvas id="hist-blue"></canvas>
+    <div id="react-component"></div>
     <script src="opencv.js" type="text/javascript"></script>
   </body>
 </html>
